--- a/client/templates/sidebar/sidebar.html
+++ b/client/templates/sidebar/sidebar.html
@@ -1,17 +1,37 @@
 <template name="sidebar">
-<div class="panel-group" id="accordion">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href='#tagCollapse'>Tag</a>
-      </h4>
-    </div>
-    <div id="tagCollapse" class="panel-collapse collapse in">
-      <div class="panel-body">
-        {{#each tags}}
-        <input type="checkbox" name="{{_id}}" value="{{name}}">{{this}}<br>
-        {{/each}}
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h4 class="panel-title">
+      <a data-toggle="collapse" href='#tagCollapse'>Tag</a>
+    </h4>
+  </div>
+  <div id="tagCollapse" class="panel-collapse collapse in">
+    <div class="panel-body">
+      {{#each tags}}
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" name="tag" value="{{name}}" data-ticket="{{_id}}">{{this}}
+        </label>
       </div>
+      {{/each}}
+    </div>
+  </div>
+</div>
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h4 class="panel-title">
+      <a data-toggle="collapse" href='#statusCollapse'>Status</a>
+    </h4>
+  </div>
+  <div id="statusCollapse" class="panel-collapse collapse in">
+    <div class="panel-body">
+      {{#each status}}
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" name="status" value="{{name}}" data-ticket="{{_id}}">{{this}}<br>
+        </label>
+      </div>
+      {{/each}}
     </div>
   </div>
 </div>
