Removed new queue modal, queues in settings.json with upsert on start, useless new ticket button

--- a/client/templates/layout/layout.html
+++ b/client/templates/layout/layout.html
@@ -1,7 +1,9 @@
 <template name="layout">
 <div class="wrap">
-{{> navbar}}
-{{> queuebar}}
+  {{> navbar}}
+  {{#if currentUser}}
+  {{> queuebar}}
+  {{/if}}
 </div>
 <div class="container-fluid">
   {{> yield}}
