--- a/client/templates/navbar/navbar.html
+++ b/client/templates/navbar/navbar.html
@@ -13,6 +13,9 @@
   {{#if currentUser }}
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="navbar-collapse">
+    <ul class="nav navbar-nav">
+      <button class="btn btn-danger navbar-btn" type="button" data-toggle="modal" data-target="#ticketModal">New Ticket</button>
+    </ul>
     <ul class="nav navbar-nav navbar-right">
       <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -31,4 +34,7 @@
   {{/if}}
 </div>
 </nav>
+{{#if currentUser}}
+{{>ticketModal}}
+{{/if}}
 </template>
