--- a/client/templates/ticketRow/ticketRow.html
+++ b/client/templates/ticketRow/ticketRow.html
@@ -2,6 +2,9 @@
 <tr data-toggle="collapse" data-target="#row{{_id}}" class="accordion-toggle">
   <td>
     <span class="glyphicon glyphicon-plus" name="{{_id}}"></span>
+    {{#if repliedTo}}
+    <span class="glyphicon glyphicon-flag"></span>
+    {{/if}}
   </td>
   <td>{{title}}</td>
   <td>{{authorId}}</td>
