Move timestamp under name, make notes textareas?

--- a/client/templates/ticketRow/ticketRow.html
+++ b/client/templates/ticketRow/ticketRow.html
@@ -35,11 +35,13 @@
         {{#each notes}}
         <div class="form-group">
           <div class="col-xs-4 col-md-1">
-            <label for="note-{{_id}}" class="control-label">{{authorName}}:</label>
+            <label for="note-{{_id}}" class="control-label">
+              {{authorName}}:<br>
+              <small class="pull-right" style="font-size: 0.8em">{{>timeParser date=timestamp}}</small>
+            </label>
           </div>
           <div class="col-xs-8 col-md-11">
-            <input class="form-control" name="note-{{_id}}" value="{{message}}" disabled>
-            <small class="pull-right" style="font-size: 0.9em">{{>timeParser date=timestamp}}</small>
+            <textarea class="form-control" name="note-{{_id}}" value="{{message}}" disabled></textarea>
           </div>
         </div>
         {{/each}}
