Better glyphicon for 'replied' to a ticket.

--- a/client/templates/ticketRow/ticketRow.html
+++ b/client/templates/ticketRow/ticketRow.html
@@ -3,7 +3,7 @@
   <td>
     <span class="glyphicon glyphicon-plus" name="{{_id}}"></span>
     {{#if repliedTo}}
-    <span class="glyphicon glyphicon-flag"></span>
+    <span class="glyphicon glyphicon-comment"></span>
     {{/if}}
   </td>
   <td>{{title}}</td>
