Initializing bootstrap tooltips/popovers.

--- a/client/templates/ticketRow/ticketRow.html
+++ b/client/templates/ticketRow/ticketRow.html
@@ -19,7 +19,7 @@
           <div class="panel-body">
             <div class="assign-user-field">
               <span class="icon glyphicon glyphicon-plus"></span>
-              <input type="text" name="assignUser" placeholder="Assign User">
+              <input type="text" name="assignUser" placeholder="Assign User" data-toggle="tooltip" title="User not found.">
               {{#if assignError}}
               Some error text. Maybe a tooltip?
               {{/if}}
