Smaller, less bold timestamp text.

--- a/client/templates/ticketRow/ticketRow.html
+++ b/client/templates/ticketRow/ticketRow.html
@@ -51,7 +51,7 @@
           <div class="col-xs-4 col-md-1">
             <label for="note-{{_id}}" class="control-label">
               {{authorName}}:<br>
-              <small class="pull-right" style="font-size: 0.8em">{{>timeParser date=timestamp}}</small>
+              <small class="pull-right" style="font-size: 0.7em; font-weight: lighter;">{{>timeParser date=timestamp}}</small>
             </label>
           </div>
           <div class="col-xs-8 col-md-11">
