Queue membership rules. Still need a check in the route.

--- a/client/templates/queuebar/queuebar.html
+++ b/client/templates/queuebar/queuebar.html
@@ -9,7 +9,7 @@
   <div class="collapse navbar-collapse" id="queueBar">
     <ul class="nav navbar-nav">
       {{#each queue}}
-      <li class="{{active}}"><a href="/queue/{{name}}">{{name}}</a></li>
+      <li class="{{active}}"><a href="/queue/{{this}}">{{this}}</a></li>
       {{/each}}
     </ul>
   </div>
