--- a/client/templates/helpers/tableFormGroup.html
+++ b/client/templates/helpers/tableFormGroup.html
@@ -1,8 +1,10 @@
 <template name="tableFormGroup">
 <div class="form-group" style="{{divStyle}}">
-  <label for="{{name}}" class="control-label col-xs-4 col-md-1">{{name}}:</label>
-  <div class="col-xs-8 col-md-11">
-    <input type="text" value="{{value}}" name="{{name}}" class="form-control {{class}}" {{disabled}}>
+  <label for="{{name}}" class="control-label col-xs-4 col-md-2">{{name}}:</label>
+  <div class="col-xs-8 col-md-10">
+    <div class="well-sm">
+      {{value}}
+    </div>
   </div>
 </div>
 </template>
