--- a/client/templates/sidebar/sidebar.html
+++ b/client/templates/sidebar/sidebar.html
@@ -10,7 +10,7 @@
       {{#each tags}}
       <div class="checkbox">
         <label>
-          <input type="checkbox" name="tag" value="{{name}}" data-ticket="{{_id}}">{{this}}
+          <input type="checkbox" name="tag">{{this}}
         </label>
       </div>
       {{/each}}
@@ -28,7 +28,7 @@
       {{#each status}}
       <div class="checkbox">
         <label>
-          <input type="checkbox" name="status" value="{{name}}" data-ticket="{{_id}}">{{this}}<br>
+          <input type="checkbox" name="status">{{this}}<br>
         </label>
       </div>
       {{/each}}
