--- a/client/templates/ticketRow/ticketRow.html
+++ b/client/templates/ticketRow/ticketRow.html
@@ -7,7 +7,7 @@
     {{/if}}
   </td>
   <td>{{title}}</td>
-  <td>{{authorId}}</td>
+  <td>{{authorName}}</td>
   <td>{{status}}</td>
   <td>{{>dateFormatter date=submittedTimestamp}}</td>
 </tr>
