User data publication, parsing of tags and users when adding tickets. TODO: Autocomplete tags/users.

--- a/client/templates/ticketRow/ticketRow.html
+++ b/client/templates/ticketRow/ticketRow.html
@@ -8,7 +8,7 @@
   </td>
   <td>{{title}}</td>
   <td>{{authorName}}</td>
-  <td>{{status}}</td>
+  <td>{{status}}<span class="caret"></span></td>
   <td>{{>dateFormatter date=submittedTimestamp}}</td>
 </tr>
 <tr>
