--- a/client/templates/ticketRow/ticketRow.html
+++ b/client/templates/ticketRow/ticketRow.html
@@ -8,7 +8,16 @@
   </td>
   <td>{{title}}</td>
   <td>{{authorName}}</td>
-  <td>{{status}}<span class="caret"></span></td>
+  <td>
+    <div class="dropdown" data-ticket="{{_id}}">
+      <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"  aria-expanded="false">{{status}}<span class="caret"></span></button>
+      <ul class="dropdown-menu" role="menu" aria-labelledby="ticketStatusDropdown">
+        <li role="presentation"><a role="menuitem" tabindex="-1">Open</a></li>
+        <li role="presentation"><a role="menuitem" tabindex="-1">Closed</a></li>
+        <li role="presentation" class="ticket-status-input"><input type="text" name="customStatus" placeholder="Or a custom status"></li>
+      </ul>
+    </div>
+  </td>
   <td>{{>dateFormatter date=submittedTimestamp}}</td>
 </tr>
 <tr>
