Bugfix: Changing status no longer toggles other dropdowns.

--- a/client/templates/ticketRow/ticketRow.html
+++ b/client/templates/ticketRow/ticketRow.html
@@ -10,7 +10,7 @@
   <td>{{authorName}}</td>
   <td>
     <div class="dropdown" data-ticket="{{_id}}">
-      <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"  aria-expanded="false">{{status}}<span class="caret"></span></button>
+      <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" name="statusButton" aria-expanded="false">{{status}}<span class="caret"></span></button>
       <ul class="dropdown-menu" role="menu" aria-labelledby="ticketStatusDropdown">
         <li role="presentation"><a role="menuitem" tabindex="-1">Open</a></li>
         <li role="presentation"><a role="menuitem" tabindex="-1">Closed</a></li>
