--- a/client/templates/modals/ticketModal/ticketModal.html
+++ b/client/templates/modals/ticketModal/ticketModal.html
@@ -7,26 +7,29 @@
         <h4 class="modal-title">Add a Ticket</h4>
       </div>
       <div class="modal-body">
-        <form class="form-horizontal">
+        <form>
           <div class="form-group">
-            <label for="onBehalfOf" class="col-xs-4 control-label">Submit on Behalf Of:</label>
-            <div class="col-xs-8">
+            <label for="onBehalfOf" class="control-label">Submit on Behalf Of:</label>
+            <div>
               <div class="input-group">
                 <input type="text" name="onBehalfOf" class="form-control" placeholder="Enter username">
                 <span class="input-group-btn"><button type="button" class="btn btn-primary" data-action="checkUsername">Check</button></span>
               </div>
             </div>
           </div>
-          {{> formGroup name="title" label="Title"}}
           <div class="form-group">
-            <label for="body" class="col-xs-4 control-label">Body:</label>
-            <div class="col-xs-8">
+            <label for="title" class="control-label">Title:</label>
+            <input class="form-control" name="title">
+          </div>
+          <div class="form-group">
+            <label for="body" class="control-label">Body:</label>
+            <div>
               <textarea class="form-control" rows="6" name="body"></textarea>
             </div>
           </div>
           <div class="form-group">
-            <label for="queueName" class="col-xs-4 control-label">Queue(s):</label>
-            <div class="col-xs-8">
+            <label for="queueName" class="control-label">Queue(s):</label>
+            <div>
               {{#each queues}}
               <div class="checkbox">
                 <label>
